static/css.css
/* Making textboxes and other text inputs behave normally (i.e. now an input
   with “width:100%;padding:10px” is going to take 100% of width, not
   100%+20px) */

*, *:before, *:after {
  box-sizing: border-box;
}

/* Making the footer stick to the bottom of the screen */

body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

#main {
  flex: 1;
}

/* Other CSS */

#header {
  border-bottom: 1px solid #606c76;
  margin-bottom: 3em;
  padding: 1.5em 1em 0.8em 0.8em;
}

.logo {
  font-size: 4rem;
}

.header-nav {
  text-transform: uppercase;
  font-size: 1.1rem;
  font-weight: 700;
  margin-left: 2em;
}

#footer {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  padding: 1.2em 0 0em 0;
  margin: 0 -1em;
  margin-top: 2em;
  border-top: 1px solid #606c76;
}

.footer-item {
  margin: 0 1em;
  min-height: 40px;
  text-align: center;
}

body {
  padding: 0px 15px;
  margin: auto;
  max-width: 800px;
  font-family: sans-serif;
  line-height: 120%;
}

form {
  margin: 0;
}

.label-err {
  color: #CC3752;
}

.fullwidth {
  width: 100%;
}

textarea.fullwidth {
  resize: vertical;
}

.section:not(.shown) {
  display:none;
}

.roomtable {
  margin-left: auto;
  margin-right: auto;
  table-layout: fixed;
  width: inherit;
}

.roomtable td {
  width: 60px;
  height: 60px;
  padding: 10px;
  border-bottom: .1rem solid #e1e1e1;
  border-right:  .1rem solid #e1e1e1;
}

.roomtable .header-left,
.roomtable .penalties > :first-child,
.roomtable .totals > :first-child {
  border-right: solid 2px;
  padding-right: 12px;
  text-align: right;
}

.roomtable .header-top {
  border-bottom: solid 2px;
  text-align: center;
}

.roomtable .header-corner {
  border-bottom: solid 2px;
  border-right:  solid 2px;
}

.roomtable .impossible {
  background-color: gray;
  border-color: gray;
}

.roomtable .played,
.roomtable .not-yet-played {
  cursor: pointer;
}
.roomtable .played:hover,
.roomtable .not-yet-played:hover {
  background-color: #FF9;
}

.roomtable .played {
  background-color: lightgray;
}

.roomtable .absent {
  opacity: 0.5;
}

.roomtable .penalties {
  border-top: solid 2px;
}

.roomtable .penalties td,
.roomtable .totals td {
  height: 30px;
  text-align: center;      /* this has no effect on first cell */
}

.round-edit-popup {
  max-width: 350px;
  background: white;
  padding: 15px 20px;
  margin: 40px auto;
  position: relative;
}

.round-edit-popup [name=penalties] {
  display: flex;
  margin: 0 -0.25rem;
}

.round-edit-popup [name=penalties] > div {
  flex: 1;
  margin: 0 0.25rem;
}

.round-edit-popup button {
  font-size: 1rem;
  height: 3rem;
  line-height: 3rem;
  padding: 0 1.5rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.round-edit-popup input {
  font-size: 1.3rem;
  height: 3rem;
  line-height: 3rem;
  padding: 0 1rem;
  margin-bottom: 1rem;
}

.round-edit-popup label {
  font-size: 1.3rem;
  margin-bottom: .2rem;
}

